5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1758_1183.log
== TEST (2019-05-27 14:12:26) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
C = 0
while i < size(v):
	if v[i]>=0:
		C += 1
	i +=1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:13:30) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
C = 0
while i < size(v):
	if v[i]>=0:
		C += 1
	i +=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:14:08) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:17:51) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c)
i = 0
while i < size(v):
	if v[i]>=0:
		v1[i] = v[i]
	i +=1
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:21:16) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c)
i = 0

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:12:38) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0
v1 = zeros(c)
while i < size(v):
	if v[i]>=0:
		c += 1
		v1[j] = v[i]
		j += 1
	i +=1
print(c)
v1 = zeros(c)
i = 0
	
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:13:12) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0
v1 = zeros(c)
while i < size(v):
	if v[i]>=0:
		c += 1
		v1[j] = v[i]
		j += 1
	i +=1
print(c)
v1 = zeros(c)
i = 0
	
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:15:16) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0

while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c)

i = 0
while i < size(v):
	v1[j] = v[i]
		j += 1
	i += 1
print(v1)
-- ERROR:
File "XXXX", line 17
    j += 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:15:50) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0

while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c)

i = 0
while i < size(v):
	if v[i]>=0
		v1[j] = v[i]
		j += 1
	i += 1
print(v1)
-- ERROR:
File "XXXX", line 16
    if v[i]>=0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:16:36) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0

while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c)

i = 0
while i < size(v):
	if v[i]>=0:
		v1[j] = v[i]
		j += 1
	i += 1
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:17:46) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0

while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c, dtype = int)

i = 0
while i < size(v):
	if v[i]>=0:
		v1[j] = v[i]
		j += 1
	i += 1
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:18:15) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0

while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c, dtype = int)

i = 0
while i < size(v):
	if v[i]>=0:
		v1[j] = v[i]
		j += 1
	i += 1
print(v1)
-- EXECUTION TIME:
0.552113
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
1
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
4
[18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:18:21) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0

while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
print(c)
v1 = zeros(c, dtype = int)

i = 0
while i < size(v):
	if v[i]>=0:
		v1[j] = v[i]
		j += 1
	i += 1
print(v1)
-- EXECUTION TIME:
0.350603
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
1
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
4
[18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:19:01) 
-- CODE:
from numpy import*
v = array(eval(input('bla bla bla: ')))
i = 0
c = 0
j = 0

while i < size(v):
	if v[i]>=0:
		c += 1
	i +=1
v1 = zeros(c, dtype = int)

i = 0
while i < size(v):
	if v[i]>=0:
		v1[j] = v[i]
		j += 1
	i += 1
print(v1)
-- EXECUTION TIME:
0.567413
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
